--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,92 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black"
-    android:fillViewport="true"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:background="@color/skyBlue"
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.peerbits.newsapp.models.LoginViewModel" />
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@color/black"
+        android:fillViewport="true"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:backgroundTint="@color/white"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/back_arrow"
-            app:tint="@color/skyBlue" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Welcome\nBack"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <com.google.android.material.card.MaterialCardView
-            style="@style/custom_card_view_style"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/skyBlue"
+            android:orientation="vertical">
 
-            >
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/back_arrow"
+                app:tint="@color/skyBlue" />
 
-            <LinearLayout
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Welcome\nBack"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.card.MaterialCardView
+                style="@style/custom_card_view_style"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginTop="50dp">
+                android:layout_height="match_parent">
 
-                <EditText
-                    android:id="@+id/edUserName"
+                <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="50dp"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/edUserName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:background="@drawable/edittext_style"
+                        android:drawableLeft="@drawable/email"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/skyBlue"
+                        android:hint="Username"
+                        android:inputType="textPersonName"
+                        android:maxLines="1"
+                        android:padding="10dp"
+                        android:text="@={viewModel.userName}" />
+
+                    <EditText
+                        android:id="@+id/edPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="20dp"
+                        android:background="@drawable/edittext_style"
+                        android:drawableLeft="@drawable/lock"
+                        android:drawableRight="@drawable/eye_open"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/skyBlue"
+                        android:hint="Password"
+                        android:inputType="textPersonName"
+                        android:maxLines="1"
+                        android:padding="10dp"
+                        android:text="@={viewModel.password}" />
+
+                    <Button
+                        android:id="@+id/loginBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginTop="70dp"
+                        android:onClick="@{() -> viewModel.loginUser()}"
+                        android:paddingVertical="10dp"
+                        android:text="Sign In"
+                        android:textSize="20dp" />
+
+                </LinearLayout>
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:background="@drawable/edittext_style"
-                    android:drawableLeft="@drawable/email"
-                    android:drawablePadding="10dp"
-                    android:drawableTint="@color/skyBlue"
-                    android:hint="Username"
-                    android:inputType="textPersonName"
-                    android:maxLines="1"
-                    android:padding="10dp" />
-
-                <EditText
-                    android:id="@+id/edPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_margin="20dp"
-                    android:background="@drawable/edittext_style"
-                    android:drawableLeft="@drawable/lock"
-                    android:drawableRight="@drawable/eye_open"
-                    android:drawablePadding="10dp"
-                    android:drawableTint="@color/skyBlue"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:padding="10dp" />
-
-                <Button
-                    android:id="@+id/loginBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginTop="70dp"
-                    android:paddingVertical="10dp"
-                    android:text="Sign In"
-                    android:textSize="20dp" />
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-    </LinearLayout>
-</ScrollView>
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
+            </com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
+    </ScrollView>
+</layout>
