--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:orientation="vertical"
     android:background="#F1F1F1"
     android:backgroundTint="@color/skyBlue"
-    >
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -16,43 +15,39 @@
         app:cardCornerRadius="10dp"
 
         >
+
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            >
-        <ImageView
-            android:id="@+id/newsImage"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"/>
+            android:padding="10dp">
 
-        <TextView
-            android:id="@+id/titleText"
-            android:layout_width="match_parent"
-            android:text="Hello"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:layout_marginTop="5dp"
-            />
+            <ImageView
+                android:id="@+id/newsImage"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher_background" />
 
-        <TextView
-            android:id="@+id/desccriptionText"
-            android:layout_width="match_parent"
-            android:text="Hello"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:layout_height="wrap_content"
-            android:maxLines="3"
-            android:layout_marginTop="5dp"
-            />
+            <TextView
+                android:id="@+id/titleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:maxLines="2"
+                android:text="Hello"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/desccriptionText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:maxLines="3"
+                android:text="Hello"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
-
 </LinearLayout>
